allow to specify multiple sysfs paths
this is useful for unified device trees where the variants have
different sysfs paths

set it with overlaying "flashDevices"

Change-Id: Ia39769efcc157ef27e34a87b8aee98b85f8b0f69

--- a/res/values/config.xml
+++ b/res/values/config.xml
@@ -44,4 +44,9 @@
 
     <!-- If the device supports high brightness mode, enable this -->
     <bool name="hasHighBrightness">false</bool>
+
+    <!-- A list of full paths to the sysfs toggle -->
+    <string-array name="flashDevices">
+        <item>/sys/class/leds/flashlight/brightness</item>
+    </string-array>
 </resources>
